# jampgame_proxy

./: .gitmodules  CMakeLists.txt  CreateVisualStudio2022Projects_x64.bat  CreateVisualStudio2022Projects_x86.bat  README.md  build.Dockerfile  build.sh  test.Dockerfile  test.sh
src/: CMakeLists.txt
src/jampgame_proxy/: Proxy_CVars.cpp  Proxy_CVars.hpp  Proxy_ClientCommand.cpp  Proxy_Files.cpp  Proxy_Header.hpp  Proxy_Main.cpp  Proxy_Main.hpp  Proxy_SharedAPI.cpp  Proxy_SharedAPI.hpp  Proxy_Shell.hpp  Proxy_Translate_SystemCalls.cpp  Proxy_Translate_SystemCalls.hpp  Proxy_Utils.cpp  Proxy_Utils.hpp
src/jampgame_proxy/Imports/game/: g_cmds.cpp
src/jampgame_proxy/Imports/qcommon/: cvar.cpp
src/jampgame_proxy/Imports/server/: sv_game.cpp  sv_game.hpp
src/jampgame_proxy/RuntimePatch/Engine/: Proxy_Engine_Client.cpp  Proxy_Engine_Client.hpp  Proxy_Engine_ClientCommand.cpp  Proxy_Engine_Patch.cpp  Proxy_Engine_Utils.hpp  Proxy_Engine_Wrappers.cpp  Proxy_Engine_Wrappers.hpp
src/jampgame_proxy/RuntimePatch/Engine/Patches/game/: Proxy_g_cmds.cpp  Proxy_g_cmds.hpp  Proxy_g_combat.cpp  Proxy_g_combat.hpp
src/jampgame_proxy/RuntimePatch/Engine/Patches/qcommon/: Proxy_cmd.cpp  Proxy_common.cpp  Proxy_files.cpp  Proxy_files.hpp
src/jampgame_proxy/RuntimePatch/Engine/Patches/server/: Proxy_sv_ccmds.cpp  Proxy_sv_client.cpp  Proxy_sv_client.hpp  Proxy_sv_game.cpp  Proxy_sv_game.hpp  Proxy_sv_main.cpp  Proxy_sv_main.hpp  Proxy_sv_snapshot.cpp  Proxy_sv_snapshot.hpp
src/jampgame_proxy/RuntimePatch/HookUtils/: HookUtils.cpp  HookUtils.hpp
src/jampgame_proxy/Wrappers/: Proxy_OpenJKAPI_Wrappers.cpp  Proxy_OriginalAPI_Wrappers.cpp  Proxy_OriginalAPI_Wrappers.hpp
src/sdk/game/: ai.h  ai_main.h  anims.h  b_public.h  be_aas.h  bg_local.h  bg_public.h  bg_saga.h  bg_vehicles.h  bg_weapons.h  g_local.h  g_nav.h  g_public.h  q_shared.h  say.h  teams.h  w_saber.h
src/sdk/qcommon/: qcommon.h  qfiles.h  tags.h
src/sdk/server/: server.h
